--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
     <body>
         <h1>长期主义者成长手册</h1>
         <p>第 1 期下载：</p>
+        <p>链接：<a href="https://pan.baidu.com/s/1WB_W741pq__5Vk6PCiPiFw?pwd=0712">https://pan.baidu.com/s/1WB_W741pq__5Vk6PCiPiFw?pwd=0712</a> <br>
+提取码：0712
+        </p>
     </body>
 </html>
