--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     </head>
     <body>
         <h1>长期主义者成长手册</h1>
-        <p>第 1 期下载：</p>
+        <h2>第 1 期下载</h2>
+        <h3>百度网盘</h3>
         <p>链接：<a href="https://pan.baidu.com/s/1WB_W741pq__5Vk6PCiPiFw?pwd=0712">https://pan.baidu.com/s/1WB_W741pq__5Vk6PCiPiFw?pwd=0712</a> <br>
 提取码：0712
         </p>
